Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132085

[REG 6.7 -> 6.8][Android] Stuck in SplashScreen on Restart

XMLWordPrintable

    • Android
    • 9903242ec (dev), 850ed0222 (6.9), cc7574cba (6.8)

      Tested with enabled "Don't keep activities" in the developer options.

      Since Qt 6.8.0 we are stuck in the splash screen on Android, when we try to (re)start the app after it was moved to the background. There are some additional log entries in this case:

      12-10 09:37:24.849 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtInputInterface has been registered.
      12-10 09:37:24.855 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtWindowInterface has been registered.
      12-10 09:37:24.855 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtWindowInterface has been registered.
      12-10 09:37:24.855 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtWindowInterface has been registered.
      12-10 09:37:24.855 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtWindowInterface has been registered.
      12-10 09:37:24.855 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtWindowInterface has been registered.
      12-10 09:37:24.855 26177 26206 W AusweisApp: default      : No interface with className org/qtproject/qt/android/QtWindowInterface has been registered.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            larss Lars Schmertmann
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes