src/android/jar/src/org/qtproject/qt/android/BackendRegister.java
@@ -4,6 +4,7 @@ package org.qtproject.qt.android;
 
 class BackendRegister
 {
+    static native boolean isNull();
     static native void registerBackend(Class interfaceType, Object interfaceObject);
     static native void unregisterBackend(Class interfaceType);
 }
