src/android/jar/src/org/qtproject/qt/android/QtEmbeddedDelegate.java
@@ -88,12 +88,19 @@ class QtEmbeddedDelegate extends QtActivityDelegateBase
         synchronized (this) {
             m_stateDetails = details;
             if (details.isStarted && !m_backendsRegistered) {
+                if (BackendRegister.isNull())
+                    return;
+
                 m_backendsRegistered = true;
                 BackendRegister.registerBackend(QtWindowInterface.class, this);
                 BackendRegister.registerBackend(QtMenuInterface.class, this);
                 BackendRegister.registerBackend(QtInputInterface.class, m_inputDelegate);
             } else if (!details.isStarted && m_backendsRegistered) {
                 m_backendsRegistered = false;
+
+                if (BackendRegister.isNull())
+                    return;
+
                 BackendRegister.unregisterBackend(QtWindowInterface.class);
                 BackendRegister.unregisterBackend(QtMenuInterface.class);
                 BackendRegister.unregisterBackend(QtInputInterface.class);
